--- a/index.html
+++ b/index.html
@@ -5,30 +5,22 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>KickStart</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable = no">
+        <meta http-equiv="expires" content="180">
         <link rel="manifest" href="site.webmanifest">
         <meta name="msapplication-config" content="browserconfig.xml" />
         <link rel="apple-touch-icon" href="icon.png">
         <link rel="shortcut icon" href="favicon.png" type="image/png">
-
         <link rel="stylesheet" href="css/style.min.css">
     </head>
     <body>
         <div class="container">
-            
             <h1><img class="logo" width="100" height="100" src="img/logo.svg"> <span>Kick</span>Start <small>3.0</small></h1>
-
             <h3>A CodeKit powered front-end template for the web!</h3>
-
             <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores.</p>
-
             <p>At solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles. Ma quande lingues coalesce, li grammatica del resultant lingue es plu simplic e regulari quam ti del coalescent lingues. Li nov lingua franca va esser plu simplic e regulari quam li existent Europan lingues.</p>
-
             <p>It va esser tam simplic quam Occidental in fact, it va esser Occidental. A un Angleso it va semblar un simplificat Angles, quam un skeptic Cambridge amico dit me que Occidental es. Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores. At solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles.</p>
-
          </div>
         <script src="js/script.min.js"></script>
-
     </body>
 </html>
